--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="message_dialog2">Dialog Non Cancelable harus ditutup dari tombol Action</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="shared_pref_file">preferences_file</string>
+    <string name="shared_pref_file_lat">preferences_file_lat</string>
 </resources>
